[package]
name = "crackedcrypto"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bitcoin and cryptography
bitcoin = "0.31"
bip39 = "2.0"
bip32 = "0.5"
secp256k1 = "0.28"
bech32 = "0.9"
sha2 = "0.10"
hmac = "0.12"
arrayref = "0.3"
k256 = "0.13"
ecdsa = "0.16"

# Async runtime for potential GPU work
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Random number generation
rand = "0.8"
rand_core = "0.6"

# CLI interface
clap = { version = "4.0", features = ["derive"] }

# Color output
colored = "2.0"

# Ethereum/EVM support
sha3 = "0.10"
hex = "0.4"
