[package]
name = "cryptoderived"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.31"
bip39 = "2.0"
bip32 = "0.5"
secp256k1 = { version = "0.28", features = ["recovery"] }
bech32 = "0.9"
sha2 = "0.10"
hmac = "0.12"
arrayref = "0.3"
k256 = "0.13"
ecdsa = "0.16"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
rand_core = "0.6"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
sha3 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
